# BSCVDemoCpp

./: .gitignore  .travis.yml  README.md
data/: .~lock.titanic.csv#  titanic.csv
documentation/: Doxyfile
documentation/html/: 3_dpoint_8hpp_source.html  annotated.html  class_geometry-members.html  class_geometry.html  class_passager-members.html  class_passager.html  class_point-members.html  class_point.html  class_smartphone-members.html  class_smartphone.html  class_smartphone__coll__graph.dot  class_smartphone__coll__graph.md5  class_smartphone__inherit__graph.dot  class_smartphone__inherit__graph.md5  class_watch-members.html  class_watch.html  classcomplex-members.html  classcomplex.html  classes.html  classphone-members.html  classphone.html  classphone__inherit__graph.dot  classphone__inherit__graph.md5  complex_8hpp_source.html  dir_222e8dfae5353f32f8d53da9783eed07.html  dir_53adf0b982dc8545998aae3f283a5a58.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cfad794c601146aa1a85c0060a24537f.html  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  files.html  (+23 more)
src/tests/: CMakeLists.txt  tests_all.cpp
src/tests/unit/: CMakeLists.txt
src/tests/unit/common/: test_3Dpoint.cc  test_3Dpoint.cpp  test_Face2d.cc  test_Face2d.cpp  test_complex.cc  test_complex.cpp  test_ex_template.cc  test_functor.cc  test_phone.cpp  test_point.cc  test_point.cpp  test_polymorphism.cc  test_process_passager.cc  test_process_passager.cpp  test_reader_passager.cc  test_reader_passager.cpp  test_smartphone.cc  test_smartphone.cpp  test_watch.cpp
(+62 files in other folders)
